(fix) added gap to additionalBlockLink

--- a/src/widgets/AdditionalLinksBlock/ui/AdditionalLinksBlock.module.scss
+++ b/src/widgets/AdditionalLinksBlock/ui/AdditionalLinksBlock.module.scss
@@ -5,5 +5,6 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  gap: 20px;
 }
 
